--- a/server/views/home/tabs.jade
+++ b/server/views/home/tabs.jade
@@ -15,24 +15,25 @@ div#tabs.visible-xs
         span.hidden-xs Moodle Links &nbsp;
         span.fa.fa-link
   .tab-content
-    #todays-schedule.tab-pane.active(role='tabpanel')
-      table.table#schedule-table
-        thead
-          tr
-            th When
-            th What
-            th Where
-        tbody
-          if todaysInfo
-            for s in todaysInfo.periods
-              if s.className.indexOf("Advisement") == -1
-                tr(class=(s.room=="Cafeteria" ? "active" : ""))
-                  td= moment(s.startTime, "hh:mm A").format("h:mm A")
-                  td= s.className.split("(")[0]
-                  td= s.room
-          else
+    if todaysInfo
+      #todays-schedule.tab-pane.active(role='tabpanel')
+        table.table#schedule-table
+          thead
             tr
-              td No classes today!
+              th When
+              th What
+              th Where
+          tbody
+            if todaysInfo
+              for s in todaysInfo.periods
+                if s.className.indexOf("Advisement") == -1
+                  tr(class=(s.room=="Cafeteria" ? "active" : ""))
+                    td= moment(s.startTime, "hh:mm A").format("h:mm A")
+                    td= s.className.split("(")[0]
+                    td= s.room
+            else
+              tr
+                td No classes today!
     #next-schedule.tab-pane(role='tabpanel')
       b.center-xs Next class day is #{moment(nextCD, "MM/DD/YY").format("dddd [the] Do")}, only #{moment(nextCD, "MM/DD/YY").fromNow()}. It is a #{nextSD}-Day.
       table.table.table-condensed#next-schedule-table
@@ -60,26 +61,27 @@ div#tabs.visible-xs
 
 
 .hidden-xs
-  if(moment().isBefore(moment().hour(16)))
-    #todays-schedule.col-xs-12.col-md-6
-      table.table
-        caption.center Today's Schedule
-        thead
-          tr
-            th When
-            th What
-            th Where
-        tbody
-          if todaysInfo
-            for s in todaysInfo.periods
-              if s.className.indexOf("Advisement") == -1
-                tr(class=(s.room=="Cafeteria" ? "active" : ""))
-                  td= moment(s.startTime, "hh:mm A").format("h:mm A")
-                  td= s.className.split("(")[0]
-                  td= s.room
-          else
+  if currentUser.scheduleObject.scheduleDays[moment().format("MM/DD/YY")]
+    if(moment().isBefore(moment().hour(16)))
+      #todays-schedule.col-xs-12.col-md-6
+        table.table
+          caption.center Today's Schedule
+          thead
             tr
-              td No classes today!
+              th When
+              th What
+              th Where
+          tbody
+            if todaysInfo
+              for s in todaysInfo.periods
+                if s.className.indexOf("Advisement") == -1
+                  tr(class=(s.room=="Cafeteria" ? "active" : ""))
+                    td= moment(s.startTime, "hh:mm A").format("h:mm A")
+                    td= s.className.split("(")[0]
+                    td= s.room
+            else
+              tr
+                td No classes today!
 
   #next-schedule.col-xs-12.col-md-6
     table.table
