Work system improvements - Work index page shows percent - Work page shows amount + percent

--- a/server/views/home/homepage.jade
+++ b/server/views/home/homepage.jade
@@ -25,8 +25,12 @@ block content
           Install #[b #[a.undercorated(target="_blank", href="http://wiki.mumble.info/wiki/Main_Page#Download_Mumble") Mumble]],
           it'll only take seconds, and then
           #[b #[a.undecorated(href="mumble://"+currentUser.username+":regis@regismumble.ddns.net/School?version=1.2.0") Click Here]]
-        br
-    
+      .col-xs-12.col-md-6
+        h3.no-margin Working?
+        p
+          | Need some music to relax to or do homework with? Look no further than
+          b
+            a(target="_blank", href="http://www.musicforprogramming.net")  here!
     .row
       .col-xs-12
         include tabs
