--- a/server/views/work/one.jade
+++ b/server/views/work/one.jade
@@ -13,6 +13,7 @@ block content
         ul.nav.nav-pills.nav-stacked
           li.active(role='presentation')
             a(href='#homework-tab') Homework
+              span.badge.right.hw-badge 
           li(role='presentation')
             a(href='#tests-tab') Tests/Quizzes
           li(role='presentation')
@@ -30,6 +31,7 @@ block content
         ul.nav.nav-pills
           li.active(role='presentation')
             a(href='#homework-tab') Homework
+              span.badge.right.hw-badge 
           li(role='presentation')
             a(href='#tests-tab') Tests/Quizzes
           li(role='presentation')
