--- a/server/views/home/homepage.jade
+++ b/server/views/home/homepage.jade
@@ -19,6 +19,26 @@ block content
     br
     br
     .row
+      .col-xs-12.col-md-6.col-lg-4#due-today
+        .media
+          .media-left.media-middle
+            a(href="/work/today")
+              img.media-object(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
+          .media-body
+            h4.media-heading Today's Work
+            .content
+      .col-xs-12.col-md-6.col-lg-4#due-closest(data-closest=moment(nextCD, "MM/DD/YY").format("YYYY-MM-DD"))
+        .media
+          .media-left.media-middle
+            a(href="/work/closest")
+              img.media-object(style="width: 5em;", src="https://cdn3.iconfinder.com/data/icons/education/512/Booking-512.png")
+          .media-body
+            h4.media-heading Upcoming Work
+            .content
+            .progress
+              .progress-bar(role='progressbar', aria-valuemin='0', aria-valuemax='100', style='width: 0%;')
+    hr
+    .row
       .col-xs-12.col-md-6
         h3.no-margin Looking to talk with classmates?
         p.
