Untested desktop notification system for classes

--- a/server/views/work/index.jade
+++ b/server/views/work/index.jade
@@ -25,7 +25,9 @@ block content
             small.right 0 items
         
         .col-xs-12
-          p.text-center Nothing!
+          p.text-center &nbsp;
+          ul
+            li Loading items...
       
       .col-xs-12.col-sm-6.col-md-3#upcoming(data-closest=closestDay)
         .page-header
@@ -33,7 +35,9 @@ block content
             small.right 0 items
         
         .col-xs-12
-          p.text-center Nothing!
+          p.text-center &nbsp;
+          ul
+            li Loading items...
       
       .col-xs-12.col-sm-6.center
         img(style="width: 100%; max-height: 500px;", src="/images/graph.png")
