--- a/views/layout.jade
+++ b/views/layout.jade
@@ -48,6 +48,7 @@ html
         ga('send', 'pageview');
 
     
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.min.js')
     script(src='/socket.io/socket.io.js')
     script(src="/script.js?9999")
     if openLogin
