--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,6 @@
 doctype html
 
-html
+html(ng-app='ontrac')
   head
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
