--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -54,6 +54,8 @@ header
           
         ul.nav.navbar-nav.navbar-right
           if loggedIn
+            li
+              a(href="#", title="Manage your reminders", data-target="#reminders-modal", data-toggle="modal", style="padding-right: 2px;padding-left: 2px;").reminder-bell.fa.fa-bell-o
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')= currentUser.firstName + " "+currentUser.lastName
                   span.caret
