--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -52,6 +52,7 @@ header
           li.dropdown
             a.service.dropdown-toggle(href="#", title="Manage your work.", data-toggle='dropdown', role='button', aria-expanded='false').fa.fa-book
             ul.dropdown-menu(role='menu')
+              li.dropdown-header Your Work
               li
                 a(href="/work") Home
               li
@@ -62,6 +63,7 @@ header
           li.dropdown
             a.service.dropdown-toggle(href="#", title="Manage your grades.", data-toggle='dropdown', role='button', aria-expanded='false').fa.fa-line-chart
             ul.dropdown-menu(role='menu')
+              li.dropdown-header Your Grades
               li
                 a(href="/grades") Home
         ul.nav.navbar-nav.navbar-right
