--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -76,6 +76,9 @@ header
                 li
                   a(href="/grades") Home
         ul.nav.navbar-nav.navbar-right
+          li
+            a(href="#")
+              span.online-badge.badge 1 online
           if loggedIn
             li
               a(href="#", data-toggle="modal", data-target="#feedback-modal", title="Offer Feedback", style="padding-right: 5px;padding-left: 2px;").fa.fa-comment
