--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -30,11 +30,10 @@ aside#sidebar
   section
     b UNDER CONSTRUCTION
     p.
-      This sidebar is stupid and is going to be removed in the next update. I've
-      already moved most of the functionality it had to the header. Removing this
-      will give a lot extra space for the actual page and make OnTrac more user friendly.
-      #[hr]
-      Please ignore the ugliness of this until it is totally removed. Thank you again for
+      This was very clunky and not very user-friendly. I's being reworked right now. I've
+      already moved most of the functionality it had to the header. The global and
+      advisement chats will go here instead along with class info and stuff.
+      Please ignore the ugliness of this until it is fixed up. Thank you again for
       being an Alpha Tester for OnTrac.
       
   
