--- a/views/parts/sidebar.jade
+++ b/views/parts/sidebar.jade
@@ -30,11 +30,7 @@ aside#sidebar
   section
     b UNDER CONSTRUCTION
     p.
-      This was very clunky and not very user-friendly. I's being reworked right now. I've
-      already moved most of the functionality it had to the header. The global and
-      advisement chats will go here instead along with class info and stuff.
-      Please ignore the ugliness of this until it is fixed up. Thank you again for
-      being an Alpha Tester for OnTrac.
+      This is being reworked very soon. Most stuff here has been moved  to the header.
       
   
   if todaysInfo
