Status circle in header

--- a/client/css/all.css
+++ b/client/css/all.css
@@ -234,3 +234,12 @@ span.badge {
 .service:hover {
   font-size: 1.5em;
 }
+
+#status-circle {
+  vertical-align: middle;
+  margin-bottom: 4px;
+}
+
+#menu-status img {
+  display: table-cell;
+}
