--- a/views/parts/header.jade
+++ b/views/parts/header.jade
@@ -47,7 +47,9 @@ header
               li
                 a(href="http://moodle.regis.org/my/", target="_blank") Moodle
               li
-                  a(href="https://owa.regis.org/owa/", target="_blank") Email
+                a(href="https://myfiles.regis.org/", target="_blank") MyFiles
+              li
+                a(href="https://owa.regis.org/owa/", target="_blank") Email
           
           if loggedIn
             li.dropdown
@@ -87,9 +89,11 @@ header
             li
               a(href="#", title="Manage your reminders.", data-target="#reminders-modal", data-toggle="modal", style="padding-right: 2px;padding-left: 2px;").reminder-bell.fa.fa-bell-o
             li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')= currentUser.firstName + " "+currentUser.lastName
+              a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
+                img#status-circle(src="/images/status-online.png")
+                | &nbsp; #{currentUser.firstName} #{currentUser.lastName}
                 span.caret
-              ul.dropdown-menu(role='menu')            
+              ul.dropdown-menu(role='menu')
                 li
                   a(href="/users/"+currentUser.username, title="View your public profile as other users see it.") View Profile
                 if (currentUser.rank > 4 || currentUser.username == "fmatranga18")
